--- a/template-book-en.latex
+++ b/template-book-en.latex
@@ -195,6 +195,35 @@ $if(author)$\author{$author$}$endif$
 	\myrepeat[10]{\gapunit}{\ }
 }
 
+%\usepackage{calc}
+\newlength\blankblanklength
+\newlength\blanktextlength
+\newlength\blankcenterindentation
+\newcommand\BlankText[2][]{%
+    % do some length calculations for text length
+    \if\relax\detokenize{#1}\relax%
+        \settowidth{\blanktextlength}{#2}%
+    \else%
+        \setlength\blanktextlength{#1}%
+    \fi% calculate width of text
+    \rlap{\makebox[\blanktextlength][c]{\textcolor{white}{#2}}}% write the text without moving, centered in a box
+    \raisebox{-0.5ex}{\hbox to \blanktextlength{\dotfill}}% add dots to cover text
+}
+
+\newcommand{\ShortBlankText}[1]{%
+    \BlankText[2cm]{#1}
+}
+\newcommand{\MediumBlankText}[1]{%
+    \BlankText[3.2cm]{#1}
+}
+\newcommand{\LongBlankText}[1]{%
+    \BlankText[4.4cm]{#1}
+}
+
+
+%\usepackage{xsim}
+%\xsimsetup{blank/fill=true}
+
 % ==============================
 % ========== DOCUMENT ==========
 % ==============================
