correct usage of font configuration latex command

--- a/template_book.latex
+++ b/template_book.latex
@@ -84,7 +84,7 @@ $if(author)$\author{$author$}$endif$
 
 
 \defaultfontfeatures{Mapping=tex-text, Scale=MatchLowercase} % what does this do? -- influences how quotes are rendered
-\setmainfont[Scale=1]{Open Sans}
+\setmainfont[Scale=1]{OpenSans-Regular.ttf}
 \setmonofont{Liberation Mono}
 \DeclareMathSizes{14}{12}{9}{7}
 %\DeclareMathSizes{<surrounding text size>}{<math text size>}{<math script size>}{<math scriptscript size>}.
